Add link to cLock preferences

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -62,4 +62,19 @@
                 android:title="@string/wifi_display_settings_title"
                 android:fragment="com.android.settings.wfd.WifiDisplaySettings" />
 
+        <PreferenceCategory
+                android:key="display_thunderkat"
+                android:title="@string/display_thunderkat_title" />
+
+        <PreferenceScreen
+                android:key="lock_clock"
+                android:summary="@string/lock_clock_summary"
+                android:title="@string/lock_clock_title" >
+
+            <intent
+                    android:action="android.intent.action.MAIN"
+                    android:targetClass="com.cyanogenmod.lockclock.preference.Preferences"
+                    android:targetPackage="com.cyanogenmod.lockclock" />
+        </PreferenceScreen>
+
 </PreferenceScreen>
