--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -114,4 +114,10 @@
         android:title="@string/dock_sounds_enable_title"
         android:defaultValue="false" />
 
+    <CheckBoxPreference
+        android:key="volume_music_controls"
+        android:title="@string/volume_music_controls_title"
+        android:summary="@string/volume_music_controls_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
