--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -120,4 +120,9 @@
         android:summary="@string/volume_music_controls_summary"
         android:defaultValue="false" />
 
+    <CheckBoxPreference
+        android:key="safe_headset_volume"
+        android:title="@string/safe_headset_volume_title"
+        android:summary="@string/safe_headset_volume_summary" />
+
 </PreferenceScreen>
